--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ main {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     color: #FFFFFF;
     background-color: #54504C;
 }
